# CudaCh4

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  globalmem.cu  main.cpp  sharedmem.cu
