CMAKE_MINIMUM_REQUIRED (VERSION 3.6)
PROJECT (CudaCh4 LANGUAGES CXX CUDA)

SET(CUDA_TOOLKIT_ROOT_DIR /usr/local/cuda)
FIND_PACKAGE(CUDA)
SET(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS};-gencode;arch=compute_30,code=sm_30;-ccbin;/usr/bin/cc;-std=c++11")

ADD_SUBDIRECTORY(src)
SET (BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR})
